--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,137 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
+title: 'Reproducible Research: Peer Assessment 1'
+output:
   html_document:
-    keep_md: true
+    keep_md: yes
+  pdf_document: default
 ---
-
+```{r setoptions, echo=FALSE}
+knitr::opts_chunk$set(echo=FALSE,results ="hide",message=FALSE,warning=FALSE,cache = TRUE)
+```
 
 ## Loading and preprocessing the data
+This is the code for loading and processing data into analytical one, the main procesures are:
 
+1. Read data from a csv file;
+2. Create a new variable of time from 'date' and 'intervals', thus we could know the exact time of recording;
+3. Set the 'steps' count into a numeric vector for following analysis.
+
+Here is the code:
+```{r load_process, echo=TRUE}
+library(dplyr)
+unzip("activity.zip")
+data=read.csv("activity.csv",stringsAsFactors = F)
+data[,3]=sprintf("%04d", data[,3])
+data=data%>%mutate(time=paste(date,interval))
+data=data%>%mutate(time=as.POSIXct(strptime(time,format="%Y-%m-%d %H%M")))
+data=data%>%mutate(steps=as.numeric(steps))
+```
 
 
 ## What is mean total number of steps taken per day?
+```{r mean_total_steps}
+library(dplyr)
+library(ggplot2)
+tsteps=tapply(data$steps,data$date,mean,na.rm=T)
+mtsteps=mean(tsteps,na.rm = T)
+par(mar=c(5,4,1,1),las=1)
+qplot(tsteps,
+      geom="histogram",
+      main = "Histogram for Total Steps Per Day", 
+      xlab = "Total steps of one day",  
+      fill=I("#56B4E9"), 
+      alpha=I(.5))+
+      geom_vline(xintercept=mtsteps,color="pink")
+```
 
-
+As illustrated in the histogram graph above, the mean total number of steps taken per day is around `r as.integer(mtsteps)`.
 
 ## What is the average daily activity pattern?
 
+```{r average_pattern}
+library(dplyr)
+library(ggplot2)
+# Calculate the average pattern
+avgptn=tapply(data$steps,data$interval,mean,na.rm=T)
+names(avgptn)=c(1:length(avgptn))
+# Genarate a time series variable
+times=as.POSIXct(unique(data$interval), format="%H%M")
+intervals=format(as.POSIXct(strptime(times,"%Y-%m-%d %H:%M:%S",tz="")) ,format = "%H:%M")
+# Locate the max steps and its time
+maxsteps=max(avgptn)
+maxtime=intervals[which.max(avgptn)]
+# Ploting a time series graph
+par(mar=c(5,4,1,1),las=1)
+qplot(x=times,y=avgptn,
+      geom="line",
+      main="Average Daily Activity Pattern", 
+      xlab="Time",
+      ylab="Average Steps in 5 minutes interval",
+      col=I("#56B4E9"), 
+      alpha=I(.8))+
+      geom_vline(xintercept=times[which.max(avgptn)],color="pink")+
+      scale_x_datetime(date_labels = "%H:%M")
+```
 
+As the average steps pattern shown above, on general, our test takers walked `r round(maxsteps, digits=2)` steps in 5 minutes at `r maxtime`, which is the peak of the data.
 
 ## Imputing missing values
+```{r processing_NAs}
+library(dplyr)
+library(ggplot2)
+library(scales)
 
+# Calculate the portion of NAs
+p=mean(is.na(data$steps))
+# Imput the missing values, well let's just input the mean value of each intervals into the missing data
+meansp=tapply(data$steps,data$interval,mean,na.rm=T)
+# Create a new data set
+newdata=data
+newdata[is.na(newdata$steps),1]=meansp[data[is.na(data$steps),3]]
 
+# Ploting a time series graph
+par(mar=c(5,4,1,1),las=1)
+newtsteps=tapply(newdata$steps,newdata$date,mean,na.rm=T)
+newmtsteps=mean(newtsteps,na.rm = T)
+newmdtsteps=median(newtsteps,na.rm = T)
+
+mix=data.frame(total_steps=c(tsteps,newtsteps),version=rep(c("original","new"),each=length(tsteps)))
+
+par(mar=c(5,4,1,1),las=1)
+qplot(data=mix,x=total_steps,geom="histogram",facets=~version,fill=version,alpha=I(.5))
+
+# calculate the original median
+mdtsteps=median(tsteps,na.rm = T)
+```
+
+`r percent(p)` of the original data are NAs. I replaced them with the average values of all non-missing records of the same interval. 
+
+The histogram above illustrates the distribution of new data. We could find that the new data has a peak around 37 which is the mean/median of all non-missing data.
+
+The mean value of total steps of the original data and new data are `r round(mtsteps, digits=6)` and `r round(newmtsteps, digits=6)` respectively, which are exactly the same.The median of these two data set are `r round(mdtsteps, digits=6)` and `r round(newmdtsteps, digits=6)`, which are quite close to each other under previous imputting strategy.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r weekdays_weekends,fig.width=10,fig.height=5}
+library(chron)
+library(dplyr)
+library(ggplot2)
+library(scales)
+library(tidyr)
+# generate weekdays/weekend data
+data=data%>%mutate(wk="Weekdays")
+data$wk[grepl("S(at|un)", weekdays(data$time))]="Weekends"
+
+# calculate the average steps in each intervals within two groups (weekdays and weekends) 
+wsteps=as.data.frame(tapply(data$steps,list(data$interval,data$wk),mean,na.rm=T))
+wsteps=wsteps%>%mutate(time=as.POSIXct(unique(data$interval), format="%H%M"))
+wsteps=gather(wsteps,key="wk",value="steps",-time)
+
+# Ploting a time series graph
+par(mar=c(5,4,1,1),mfrow=c(2,1))
+qplot(data=wsteps,time,steps,color=wk,geom="line")+scale_x_datetime(date_labels = "%H:%M")+labs(color="Days")
+qplot(data=wsteps,time,steps,geom="line",facets=~wk,color=wk)+scale_x_datetime(date_labels = "%H:%M")+labs(color="Days")
+```
+
+Compare two patterns in the graph above, we could see that the walking pattern in weekdays have four obvious peaks around 8:00, 12:00, 16:00 and 19:00, which shows a general moving pattern in our daily weekdays. 
+
+In contrast, the pattern of weekends is flatter, and later than weekdays. Generally, in weekends, people tend to get up later, enjoy activities with walking more in the afternoon and night.
